Changed name of website

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel World</title>
+    <title>Explore World</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -12,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Travel World</div>
+            <div class="logo">Explore World</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#destinations">Destinations</a></li>
@@ -78,7 +79,7 @@
             <span class="close-btn">&times;</span>
             <div class="login-header">
                 <h2>Create Account</h2>
-                <p>Join Travel World today</p>
+                <p>Join Explore world today</p>
             </div>
             <form id="signUpForm" class="login-form">
                 <div class="form-group">
@@ -188,7 +189,7 @@
         <div class="modal-content travel-pass">
             <span class="close-btn" id="closePass">&times;</span>
             <div class="pass-header">
-                <h2>Travel World Pass</h2>
+                <h2>Explore world Pass</h2>
                 <p>Your journey begins here</p>
             </div>
             <div class="pass-details">
@@ -252,7 +253,7 @@
         <div class="about-content">
             <div class="about-text">
                 <p>
-                    At <strong>Travel World</strong>, we believe that every journey should be unforgettable.
+                    At <strong>Explore World</strong>, we believe that every journey should be unforgettable.
                     Our mission is to provide you with exceptional travel experiences tailored to your dreams.
                     Whether it's a relaxing beach vacation, a thrilling adventure, or a cultural exploration, we've got
                     you covered.
@@ -272,7 +273,7 @@
 
     <section id="contact" class="contact" style="background-image: linear-gradient(to right, #9796f0, #fbc7d4);">
         <h2>Contact Us</h2>
-        <form action="https://formspree.io/f/xpwpaaqa" method="POST" id="contact-form" style="display: flex; flex-direction: column;">
+        <form action="https://formspree.io/f/mgvkzwjw" method="POST" id="contact-form" style="display: flex; flex-direction: column;">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" placeholder="Your Message" required></textarea>
@@ -301,7 +302,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
-                <h2>Travel World</h2>
+                <h2>Explore World</h2>
                 <p>Your journey begins with us</p>
             </div>
             <div class="footer-links">
@@ -334,7 +335,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Travel World. All rights reserved.</p>
+            <p>&copy; 2025 Explore World. All rights reserved.</p>
             <p>Made By FURQAN NAIKWADI</p>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-facebook"></i></a>
